frontend/tests/errors/ER-003/return_type_mismatch/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Type mismatches are reported as compile-time errors | Type mismatch: return type mismatch


&^main() -> #i32 {
    1;
}
